[package]
name = "mqtt-sys"
version = "0.1.0"
authors = ["Jing Yanqing <yanqing.jing@osim.com.sg>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "*"

[build-dependencies]
bindgen = "*"
pkg-config = "*"
cc = "*"
